--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,18 +11,25 @@
   "dependencies": {
     "@coderosh/images-to-pdf": "^2.1.0",
     "axios": "^1.7.7",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18"
+    "lightgallery": "^2.8.2",
+    "next": "15.0.4",
+    "nuka-carousel": "^8.1.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-image-gallery": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1"
   }
 }
