--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^1.7.7",
     "lightgallery": "^2.8.2",
     "next": "15.0.4",
-    "nuka-carousel": "^8.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-image-gallery": "^1.3.0"
@@ -24,6 +23,7 @@
     "@types/react-dom": "19.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
+    "lucide-react": "^0.469.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
